haskell-cabal-debian (4.20) unstable; urgency=low

  * Fix handling of debian maintainer and debian uploaders
  * Improve formatting of debian/rules file
  * Rename function debianization -> debianize
  * Rename function finalizeDebianization' -> finalizeDebianization
  * Rename function getDebianMaintainer -> getCurrentDebianUser

 -- David Fox <dsf@seereason.com>  Fri, 09 Jan 2015 11:49:04 -0800

haskell-cabal-debian (4.19.3) unstable; urgency=low

  * Fix issue #23, so that if you run 'cabal-debian' and then
    'cabal-debian --compare' it says there are no differences.
  * Fix issue #16 - set revision if format is Quilt3.

 -- David Fox <dsf@seereason.com>  Thu, 08 Jan 2015 05:20:32 -0800

haskell-cabal-debian (4.19.2) unstable; urgency=low

  * Use canonical to put the debianization in a standard form before
    trying to compare existing and generated.
  * Fix bug where cabal-debian program processed the command line options
    twice.
  * Avoid using paths that point to ../ in the cabal file (even if
    disabled by a flag), it causes the package to be rejected by hackage.

 -- David Fox <dsf@seereason.com>  Wed, 07 Jan 2015 13:26:33 -0800

haskell-cabal-debian (4.19.1) unstable; urgency=low

  * Support Cabal-1.22
  * Test whether apt-file is installed (from creichert)
  * Conditional compilation for new symbols MPL and BSD2 (from creichert)

 -- David Fox <dsf@seereason.com>  Wed, 07 Jan 2015 12:56:00 -0800

haskell-cabal-debian (4.19) unstable; urgency=low

  * Add remapCabal function here from a private package
  * Remove debianVersionSplits, which has long been replaced by
    debianDefaultAtoms.

 -- David Fox <dsf@seereason.com>  Mon, 08 Dec 2014 10:07:06 -0800

haskell-cabal-debian (4.18) unstable; urgency=low

  * Add types to support machine readable copyright files.
  * Add --debian-base-name option and overrideDebianBaseName lens.
  * Add --omit-prof-version-deps option flag, have --official imply it
